pcmanfm-qt-1.2.1 / 2023-01-02
==============================
 * Corrected the icon for "New Tab".
 * Corrected some descriptions in Hidden Shortcuts dialog.
 * Enabled tab DND under Wayland.
 * Fixed the context menus of tabs and forward/backward buttons under Wayland.

pcmanfm-qt-1.2.0 / 2022-11-05
==============================
 * Fixed the links of About dialog.
 * Added search history.
 * Localize "Search Results".
 * Consider device pixel ratio when drawing wallpaper. Also, an old problem is fixed in centering per-screen wallpapers with multi-screen setups.
 * Prevent an empty desktop path.
 * Allow customizing workspace margins on Desktop.
 * Added options for locale-awareness and zero-padding to bulk renaming.
 * Ignore auto-selection delay when single-click activation isn't chosen.
 * Added an entry for Categories to launcher creator.
 * Added "What's-This" help to launcher creator.
 * Added an action with `Ctrl+D` as its shortcut to Edit menu for deselecting all items.
 * Corrected bulk renaming shortcut on Desktop.
 * Set QTerminal in default config file for LXQt.
 * Apply changes in settings shared by Desktop and windows to Desktop too (auto-delay selection, right-click behavior, showing of thumbnails and treating backup files as hidden).

pcmanfm-qt-1.1.0 / 2022-04-15
==============================
 * Added "Recent Files" to File menu.
 * Initialized three Boolean variables in `settings.cpp`.
 * Removed hard-coded link style in About dialog.
 * Fixed DND and keyboard navigation on RTL desktops.
 * Fixed a rare issue in selection of new files.
 * Added "Open in Terminal" to the top of folder context menu.
 * Implemented `org.freedesktop.FileManager1` (for apps that call the default file manager to show files inside a directory or to do other jobs).
 * Added page names to the descriptions of pref command-line options.
 * Corrected a condition for transient filter-bar.
 * Fixed an issue in positioning of sticky items on Desktop.